Consolidated  Keyframes: Since the keyframes for fade-in and fade-in-1 are identical, you can merge them into one.

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+}
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+} */
+
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+.sidebar-logo {
+  @apply flex items-center gap-2 md:py-2;
+}
+
 @layer base {
   .text-stroke {
     -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
@@ -215,5 +249,15 @@
     stroke-dasharray: 14px;
     stroke: var(--success);
     stroke-dashoffset: var(--success-stroke);
+  }
+}
+
+.prose-dark {
+  color: #ffffff; /* Dark mode text color */
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
   }
 }
