--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 :root {
+  --font-poppins: "Poppins", sans-serif;
+  --font-lora: "Lora", serif;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,6 +26,15 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-family: "Poppins", sans-serif;
+}
+
+html {
+  font-family: var(--font-poppins);
+}
+
+h1 {
+  font-family: var(--font-lora);
 }
 
 @layer utilities {
