added new Author variable to our blogposts 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --font-poppins: "Poppins", sans-serif;
-  --font-lora: "Lora", serif;
+  --font-montserrat: "Montserrat", sans-serif;
+  --font-barlow: "Barlow", serif;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -26,15 +26,17 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  font-family: "Poppins", sans-serif;
+  font-family: var(--font-montserrat);
 }
 
 html {
-  font-family: var(--font-poppins);
+  font-family: var(--font-montserrat);
+  font-weight: 400;
 }
 
 h1 {
-  font-family: var(--font-lora);
+  font-family: var(--font-barlow);
+  font-weight: 900;
 }
 
 @layer utilities {
