added new blogpost with a new design and newsletter section 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --font-montserrat: "Montserrat", sans-serif;
-  --font-barlow: "Barlow", serif;
+  --font-quicksand: "Quicksand", sans-serif;
+  /* --font-barlow: "Barlow", serif; */
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -26,17 +26,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  font-family: var(--font-montserrat);
+  font-family: var(--font-quicksand);
+  font-weight: 400;
 }
 
 html {
-  font-family: var(--font-montserrat);
+  font-family: var(--font-quicksand);
   font-weight: 400;
 }
 
 h1 {
-  font-family: var(--font-barlow);
-  font-weight: 900;
+  font-family: var(--font-quicksand);
+  font-weight: 700;
 }
 
 @layer utilities {
